--- a/app/src/main/res/layout/repo_items.xml
+++ b/app/src/main/res/layout/repo_items.xml
@@ -6,13 +6,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_5dp"
-    android:layout_marginHorizontal="@dimen/margin_5dp"
+    android:layout_marginBottom="@dimen/margin_10dp"
+    android:layout_marginHorizontal="@dimen/margin_10dp"
     android:padding="@dimen/margin_12dp"
     android:background="@drawable/plain_border_radius5">
 
     <TextView
-        android:id="@+id/txt_author_name"
+        android:id="@+id/txt_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/heading_color"
@@ -20,99 +20,52 @@
         android:textSize="@dimen/text_16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="EbookFoundation / free-programming-books" />
+        tools:text="EbookFoundation" />
 
     <TextView
-        android:id="@+id/txt_description"
+        android:id="@+id/txt_created_at"
         android:layout_width="@dimen/margin_0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_2dp"
+        android:layout_marginTop="@dimen/margin_5dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/text_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_author_name"
-        tools:text="📚 Freely available programming books" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_title"
+        tools:text="Created at: 10:25 23rd July 2020" />
 
     <TextView
-        android:id="@+id/txt_language"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_2dp"
-        android:drawablePadding="@dimen/margin_2dp"
-        android:gravity="center_vertical"
-        android:textColor="@color/text_color"
-        app:drawableStartCompat="@drawable/ic_baseline_circle_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_description"
-        tools:text="Python" />
-
-    <TextView
-        android:id="@+id/txt_stars"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_20dp"
-        android:layout_marginTop="@dimen/margin_2dp"
-        android:drawablePadding="@dimen/margin_2dp"
-        app:layout_goneMarginStart="@dimen/margin_0dp"
-        android:gravity="center_vertical"
-        android:textColor="@color/text_color"
-        app:drawableStartCompat="@drawable/ic_baseline_star_outline_24"
-        app:drawableTint="@color/text_color"
-        app:layout_constraintStart_toEndOf="@id/txt_language"
-        app:layout_constraintTop_toBottomOf="@+id/txt_description"
-        tools:text="240,258" />
-
-    <TextView
-        android:id="@+id/txt_forks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_20dp"
-        android:layout_marginTop="@dimen/margin_2dp"
-        android:drawablePadding="@dimen/margin_2dp"
-        android:gravity="center_vertical"
-        android:textColor="@color/text_color"
-        app:drawableStartCompat="@drawable/ic_git_fork"
-        app:drawableTint="@color/text_color"
-        app:layout_constraintStart_toEndOf="@+id/txt_stars"
-        app:layout_constraintTop_toBottomOf="@+id/txt_description"
-        tools:text="49,641" />
-
-    <TextView
-        android:id="@+id/txt_built_by"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/built_by"
-        android:textColor="@color/text_color"
-        app:layout_constraintBottom_toBottomOf="@+id/ll_built_by"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ll_built_by" />
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/ll_built_by"
+        android:id="@+id/txt_closed_at"
         android:layout_width="@dimen/margin_0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_2dp"
-        android:orientation="horizontal"
-        android:layout_marginStart="@dimen/margin_5dp"
+        android:layout_marginTop="@dimen/margin_5dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/text_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/txt_built_by"
-        app:layout_constraintTop_toBottomOf="@+id/txt_stars" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_created_at"
+        tools:text="Closed at: 10:25 23rd July 2020" />
+
+    <ImageView
+        android:id="@+id/img_user"
+        android:layout_width="@dimen/margin_25dp"
+        android:layout_height="@dimen/margin_25dp"
+        android:layout_marginTop="@dimen/margin_5dp"
+        android:layout_marginStart="@dimen/margin_5dp"
+        app:layout_constraintStart_toEndOf="@+id/txt_username"
+        app:layout_constraintTop_toBottomOf="@+id/txt_closed_at" />
 
     <TextView
-        android:id="@+id/txt_stars_today"
+        android:id="@+id/txt_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawablePadding="@dimen/margin_2dp"
-        android:layout_marginTop="@dimen/margin_2dp"
-        android:gravity="center_vertical"
-        android:textColor="@color/text_color"
-        app:drawableStartCompat="@drawable/ic_baseline_star_outline_24"
-        app:drawableTint="@color/text_color"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toTopOf="@id/img_user"
+        app:layout_constraintBottom_toBottomOf="@+id/img_user"
+        android:maxLines="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_built_by"
-        tools:text="479 stars today" />
-
+        android:ellipsize="end"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
